# ScratchScript

./: README.md  pyproject.toml
examples/: flappy-bird.scratchscript  platformer.scratchscript  pong.scratchscript
src/scratchscript/: __init__.py  cli.py  gui.py  reviewer.py
src/scratchscript/assets/: __init__.py  library.py
src/scratchscript/compiler/: __init__.py  ast_nodes.py  autorepair.py  bundler.py  codegen.py  decompiler.py  lexer.py  opcodes.py  parser.py  validator.py
src/scratchscript/prompts/: __init__.py  examples.py  system.txt
src/scratchscript/providers/: __init__.py  base.py  claude.py  gemini.py  ollama.py  openai.py
tests/: conftest.py  test_autorepair.py  test_bundler.py  test_codegen.py  test_integration.py  test_lexer.py  test_parser.py
tests/fixtures/: flappy.scratchscript  hello.scratchscript
