[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scratchscript"
version = "0.1.0"
description = "Claude Code for Scratch — convert natural language to Scratch 3.0 .sb3 files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "kritav"},
]
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
claude = ["anthropic>=0.40"]
openai = ["openai>=1.0"]
gemini = ["google-generativeai>=0.8"]
all = [
    "anthropic>=0.40",
    "openai>=1.0",
    "google-generativeai>=0.8",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
scratchscript = "scratchscript.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
